# dhrubo-ai-agency

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: logging.yaml  models.yaml  permissions.yaml  retry_policies.yaml
docs/: MILESTONE_1.md  MILESTONE_10_IMPLEMENTATION.md  MILESTONE_11_IMPLEMENTATION.md  MILESTONE_12_IMPLEMENTATION.md  MILESTONE_13_IMPLEMENTATION.md  MILESTONE_2_IMPLEMENTATION.md  MILESTONE_2_SPEC.md  MILESTONE_3_IMPLEMENTATION.md  MILESTONE_4_IMPLEMENTATION.md  MILESTONE_5_IMPLEMENTATION.md  MILESTONE_6_IMPLEMENTATION.md  MILESTONE_7_IMPLEMENTATION.md  MILESTONE_8_IMPLEMENTATION.md  MILESTONE_9_IMPLEMENTATION.md
frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
runs/20260701T150404Z_https___example.com_/: data.json  report.md
runs/20260701T154310Z_https___example.com_/: data.json  report.md
scripts/: batch_auditor.py  download_hf_dataset.py  fine_tune_unsloth.py
src/dhrubo/: __init__.py
src/dhrubo/agents/: __init__.py  accessibility_reviewer.py  base_agent.py  branding_reviewer.py  business_reviewer.py  business_writer.py  cro_reviewer.py  dataset_generator.py  diff_reviewer.py  exporter.py  llm_agent.py  page_indexer.py  performance_reviewer.py  planner.py  publisher.py  qa_reviewer.py  report_writer.py  screenshot_agent.py  security_reviewer.py  seo_reviewer.py  ui_reviewer.py  ux_reviewer.py  website_crawler.py
src/dhrubo/api/: server.py
src/dhrubo/commands/: __init__.py  cli.py
src/dhrubo/config/: __init__.py  loader.py  models.py  permissions.py  settings.py
src/dhrubo/core/: __init__.py  errors.py  issue_id.py  logger.py  retry.py  run_index.py  run_window.py  slug.py  telemetry.py  timeparse.py
src/dhrubo/dashboard/: __init__.py  app.py  paths.py  supervisor.py
src/dhrubo/dashboard/routes/: __init__.py  diff.py  publish.py  runs.py  system.py
src/dhrubo/dashboard/static/: diff.js  events.js  publish.js  style.css
src/dhrubo/dashboard/templates/: base.html  diff.html  error.html  home.html  host.html  job.html  publish.html  report.html
src/dhrubo/llm/: __init__.py  interface.py  mock_provider.py  openai_provider.py  registry.py
src/dhrubo/memory/: __init__.py  session_memory.py
src/dhrubo/tools/: __init__.py  axe_tool.py  branding_tool.py  browser_driver.py  browser_pool.py  diff_tool.py  github_comment_tool.py  image_utils.py  lighthouse_tool.py  markdown_diff_renderer.py  markdown_to_pdf_tool.py  null_driver.py  playwright_impl.py  screenshot_tool.py  security_tool.py  sitemap_tool.py  technology_detector_tool.py  tool_interface.py  web_fetch_tool.py
src/dhrubo/workflows/: __init__.py  engine.py  task.py  task_queue.py  website_audit_pipeline.py
tests/: __init__.py  conftest.py  test_accessibility_reviewer.py  test_agents.py  test_axe_tool.py  test_branding_reviewer.py  test_branding_tool.py  test_browser.py  test_cli.py  test_config.py  test_crawler_fallback.py  test_crawler_reporter.py  test_dashboard_app.py  test_dashboard_routes.py  test_dashboard_supervisor.py  test_diff_reviewer.py  test_diff_tool.py  test_errors.py  test_exporter.py  test_github_comment_tool.py  test_image_utils.py  test_integration.py  test_lighthouse_tool.py  test_llm.py  test_llm_agent.py  test_logger.py  test_markdown_diff_renderer.py  test_markdown_to_pdf_tool.py  test_page_indexer.py  test_performance_reviewer.py  test_publisher_agent.py  test_report_writer.py  test_retry.py  test_run_window.py  test_screenshot_agent.py  test_security_reviewer.py  test_security_tool.py  test_telemetry.py  test_timeparse.py  test_tools.py  (+4 more)
