[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dhrubo-ai-agency"
version = "0.1.0"
description = "Enterprise-grade autonomous AI Website Audit Agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Dhrubo AI Engineering" },
]
keywords = ["ai", "agents", "audit", "playwright", "seo", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core runtime deps kept intentionally minimal.
# Heavy / optional capabilities go into extras.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "PyYAML>=6.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "openai>=1.40",
]

[project.optional-dependencies]
# Browser automation stack
browser = [
    "playwright>=1.45",
]
# Performance audits (PageSpeed Insights HTTP). The `[performance]` extra
# is currently a no-op — the LighthouseTool only talks to Google's PSI
# endpoint over httpx. Reserved for a future local-Lighthouse integration.
performance = []
# Accessibility audits (axe-core in a real browser). The `[a11y]` extra
# re-lists `playwright` so a user can opt-in to a11y alone, without the
# screenshot pipeline. Install Chromium once via `playwright install
# chromium` before running axe.
a11y = [
    "playwright>=1.45",
    "axe-playwright-python>=0.1",
]
# PDF generation
pdf = [
    "weasyprint>=62",
    "markdown>=3.6",
]
# Vector memory (RAG)
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
# Vision-capable reviewer agents via Anthropic
anthropic = [
    "anthropic>=0.30",
]
# Distributed task queue
broker = [
    "arq>=0.25",
    "redis>=5.0",
]

# Web UI backend. We pull `markdown` here too so a user who
# installs only `[ui]` (and skips `[pdf]`) can still render
# `report.md` in the browser.
ui = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1",
    "markdown>=3.6",
]

dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
dhrubo = "dhrubo.commands.cli:app"

[project.urls]
Homepage = "https://example.local/dhrubo-ai-agency"
Issues = "https://example.local/dhrubo-ai-agency/issues"

# Source layout: src/dhrubo/...
# A single top-level package avoids clobbering common module names
# (e.g. `agents`, `tools`, `config`) on sys.path.
[tool.hatch.build.targets.wheel]
packages = ["src/dhrubo"]

# Ship static-data folders (prompt .j2 templates, report templates) with the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/dhrubo/prompts" = "dhrubo/prompts"
"src/dhrubo/templates" = "dhrubo/templates"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/dhrubo", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default argument is fine in Pydantic
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "network: marks tests that require network access",
]

[tool.coverage.run]
source = ["src/dhrubo"]
omit = ["tests/*"]
